Fix overlay alignment in Firefox

--- a/src/App.scss
+++ b/src/App.scss
@@ -117,8 +117,8 @@ body,
 
 .textarea-overlay {
   position: absolute;
-  right: 0;
-  bottom: 0;
+  left: 0;
+  top: 0;
   width: 100%;
   height: 100%;
   background-color: transparent;
